cmake_minimum_required(VERSION 3.2)
project(Planets)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    dependencies/SDL2/include/begin_code.h
    dependencies/SDL2/include/close_code.h
    dependencies/SDL2/include/SDL.h
    dependencies/SDL2/include/SDL_assert.h
    dependencies/SDL2/include/SDL_atomic.h
    dependencies/SDL2/include/SDL_audio.h
    dependencies/SDL2/include/SDL_bits.h
    dependencies/SDL2/include/SDL_blendmode.h
    dependencies/SDL2/include/SDL_clipboard.h
    dependencies/SDL2/include/SDL_config.h
    dependencies/SDL2/include/SDL_cpuinfo.h
    dependencies/SDL2/include/SDL_endian.h
    dependencies/SDL2/include/SDL_error.h
    dependencies/SDL2/include/SDL_events.h
    dependencies/SDL2/include/SDL_filesystem.h
    dependencies/SDL2/include/SDL_gamecontroller.h
    dependencies/SDL2/include/SDL_gesture.h
    dependencies/SDL2/include/SDL_haptic.h
    dependencies/SDL2/include/SDL_hints.h
    dependencies/SDL2/include/SDL_joystick.h
    dependencies/SDL2/include/SDL_keyboard.h
    dependencies/SDL2/include/SDL_keycode.h
    dependencies/SDL2/include/SDL_loadso.h
    dependencies/SDL2/include/SDL_log.h
    dependencies/SDL2/include/SDL_main.h
    dependencies/SDL2/include/SDL_messagebox.h
    dependencies/SDL2/include/SDL_mouse.h
    dependencies/SDL2/include/SDL_mutex.h
    dependencies/SDL2/include/SDL_name.h
    dependencies/SDL2/include/SDL_opengl.h
    dependencies/SDL2/include/SDL_opengles.h
    dependencies/SDL2/include/SDL_opengles2.h
    dependencies/SDL2/include/SDL_pixels.h
    dependencies/SDL2/include/SDL_platform.h
    dependencies/SDL2/include/SDL_power.h
    dependencies/SDL2/include/SDL_quit.h
    dependencies/SDL2/include/SDL_rect.h
    dependencies/SDL2/include/SDL_render.h
    dependencies/SDL2/include/SDL_revision.h
    dependencies/SDL2/include/SDL_rwops.h
    dependencies/SDL2/include/SDL_scancode.h
    dependencies/SDL2/include/SDL_shape.h
    dependencies/SDL2/include/SDL_stdinc.h
    dependencies/SDL2/include/SDL_surface.h
    dependencies/SDL2/include/SDL_system.h
    dependencies/SDL2/include/SDL_syswm.h
    dependencies/SDL2/include/SDL_test.h
    dependencies/SDL2/include/SDL_test_assert.h
    dependencies/SDL2/include/SDL_test_common.h
    dependencies/SDL2/include/SDL_test_compare.h
    dependencies/SDL2/include/SDL_test_crc32.h
    dependencies/SDL2/include/SDL_test_font.h
    dependencies/SDL2/include/SDL_test_fuzzer.h
    dependencies/SDL2/include/SDL_test_harness.h
    dependencies/SDL2/include/SDL_test_images.h
    dependencies/SDL2/include/SDL_test_log.h
    dependencies/SDL2/include/SDL_test_md5.h
    dependencies/SDL2/include/SDL_test_random.h
    dependencies/SDL2/include/SDL_thread.h
    dependencies/SDL2/include/SDL_timer.h
    dependencies/SDL2/include/SDL_touch.h
    dependencies/SDL2/include/SDL_types.h
    dependencies/SDL2/include/SDL_version.h
    dependencies/SDL2/include/SDL_video.h
    Planets/GraphManager.cpp
    Planets/GraphManager.h
    Planets/Industry.cpp
    Planets/Industry.hpp
    Planets/Logger.cpp
    Planets/Logger.h
    Planets/Main.cpp
    Planets/Main.hpp
    Planets/Ore_Stockpile.cpp
    Planets/Ore_Stockpile.hpp
    Planets/orenames.txt
    Planets/Path.hpp
    Planets/Planet.cpp
    Planets/Planet.hpp
    Planets/PlanetManager.cpp
    Planets/PlanetManager.hpp
    Planets/StateFactory.cpp
    Planets/StateFactory.h)

add_executable(Planets ${SOURCE_FILES})